--- a/src/app/pages/groups/group-home-page/group-home-page.component.html
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.html
@@ -11,10 +11,10 @@
       </div>
       <ion-label class="profile-label">
         <div class="name">
-          <h1>{{selectedGroup.displayName}}.</h1>
+          <h1>{{selectedGroup.displayName}}</h1>
         </div>
         <div class="members">
-          <p>{{selectedGroup.members?.length}} Members.</p>
+          <p>{{selectedGroup.members?.length}} Members</p>
         </div>
         <div class="bio">
           <p>{{selectedGroup.bio}}.</p>
