--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -54,6 +54,6 @@ ion-menu-button {
     color: black;
 }
 
-ion-tab-bar {
-    --background: #E63946;
-}
+// ion-tab-bar {
+//     --background: #E63946;
+// }
