--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -13,7 +13,7 @@
       </div>
       <ion-label class="profile-label">
         <div class="name">
-          <h1>{{user!.displayName}}.</h1>
+          <h1>{{user!.displayName}}</h1>
         </div>
         <div class="bio">
           <p>{{user.bio}}.</p>
@@ -21,15 +21,15 @@
       </ion-label>
       <div class="group-buttons">
         <ion-button fill="outline" *ngIf="friendshipStatus && !isRequested()" (click)="removeFriend()">
-          <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
+          <ion-icon name="person" style="padding-right: 5px;"></ion-icon>
           Remove Friend
         </ion-button>
         <ion-button fill="outline" *ngIf="!friendshipStatus && !isRequested()" (click)="addFriend()">
-          <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
+          <ion-icon name="person" style="padding-right: 5px;"></ion-icon>
           Add friend
         </ion-button>
         <ion-button fill="outline" *ngIf="isRequested()" [disabled]="true">
-          <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
+          <ion-icon name="person" style="padding-right: 5px;"></ion-icon>
           Requested
         </ion-button>
       </div>
@@ -47,7 +47,7 @@
           <ion-card (click)="viewFriends()">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="people-outline"></ion-icon>
+                <ion-icon name="people"></ion-icon>
               </ion-card-title>
               <h2>{{friends!.length + " Friends"}}</h2>
             </ion-card-content>
@@ -57,7 +57,7 @@
           <ion-card>
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="people-outline"></ion-icon>
+                <ion-icon name="people"></ion-icon>
               </ion-card-title>
               <h2>0 Groups</h2>
             </ion-card-content>
@@ -67,7 +67,7 @@
           <ion-card (click)="viewSchedules()">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="barbell-outline"></ion-icon>
+                <ion-icon name="barbell"></ion-icon>
               </ion-card-title>
               <h2>{{workoutSchedules!.length}} Sessions</h2>
             </ion-card-content>
@@ -103,7 +103,7 @@
           <ion-card>
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="star-outline"></ion-icon>
+                <ion-icon name="star"></ion-icon>
               </ion-card-title>
               <h2 *ngIf="points$ | async as points; else loaderContent">{{points.userPoints}} Points</h2>
               <ng-template #loaderContent>
