--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -4,7 +4,7 @@
       <div class="back-button">
         <ion-item lines="none">
           <backbutton slot="start"></backbutton>
-          <ion-icon name="create-outline" routerLink="/setprofile" slot="end"></ion-icon>
+          <ion-icon name="create-outline" routerLink="/setprofile" slot="end" style="color: black"></ion-icon>
         </ion-item>
       </div>
       <div class="profile-img-container">
@@ -14,7 +14,7 @@
       </div>
       <ion-label class="profile-label">
         <div class="name">
-          <h1>{{displayName$}}.</h1>
+          <h1>{{displayName$}}</h1>
         </div>
               <ion-row>
                 <ion-col class = "theCol">{{myBio$}}</ion-col>
@@ -22,12 +22,12 @@
       </ion-label>
       <div class="group-buttons">
         <ion-button fill="outline" routerLink="/friends">
-          <ion-icon name="person-outline" style="padding-right: 5px;"></ion-icon>
-          {{friendsSize + " Friends"}}
+          <ion-icon name="person" style="padding-right: 5px;"></ion-icon>
+          {{getFriendsSize()}}
         </ion-button>
         <ion-button fill="outline" (click)="Groups()">
-          <ion-icon name="people-outline" style="padding-right: 5px;"></ion-icon>
-          0 Groups
+          <ion-icon name="people" style="padding-right: 5px;"></ion-icon>
+          {{getGroupsSize()}}
         </ion-button>
       </div>
     </div>
@@ -44,7 +44,7 @@
           <ion-card routerLink="/fitnessgoals">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="american-football-outline"></ion-icon>
+                <ion-icon name="american-football"></ion-icon>
               </ion-card-title>
               <h2>Goals</h2>
             </ion-card-content>
@@ -54,7 +54,7 @@
           <ion-card routerLink="/view-personalbests">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="analytics-outline"></ion-icon>
+                <ion-icon name="analytics"></ion-icon>
               </ion-card-title>
               <h2>Personal Best</h2>
             </ion-card-content>
@@ -64,7 +64,7 @@
           <ion-card routerLink="/healthdata">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="heart-outline"></ion-icon>
+                <ion-icon name="heart"></ion-icon>
               </ion-card-title>
               <h2>Health Data</h2>
             </ion-card-content>
@@ -95,7 +95,7 @@
           <ion-card routerLink="/points">
             <ion-card-content>
               <ion-card-title>
-                <ion-icon name="star-outline"></ion-icon>
+                <ion-icon name="star"></ion-icon>
               </ion-card-title>
               <h2>Points</h2>
             </ion-card-content>
