--- a/src/app/pages/userprofile/userprofile.page.scss
+++ b/src/app/pages/userprofile/userprofile.page.scss
@@ -27,10 +27,6 @@
     padding-bottom: 20px;
 }
 
-swiper-container::part(bullet-active) {
-    background-color:#E63946 // #A8DADC;
-  }
-
 .otheruser-profile-activity {
     width: 100%;
 }
@@ -62,4 +58,8 @@ ion-title {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+}
+
+ion-icon {
+    color: #457b9d;
 }
