--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
@@ -32,22 +32,7 @@ ion-item {
 }
 
 ion-button {
-  --background: #457b9d;
-  --background-hover: #558eb7;
-  --background-activated: #4a86a8;
-  --background-focused: #4a86a8;
-  border-radius: 12px;
-
-  --border-style: solid;
-  --border-width: 2px;
-  --border-color: #A8DADC;
-
-  --color: white;
-  margin: 15px;
-}
-
-ion-grid {
-  height: 100%;
+  margin-top: 20px;
 }
 
 ion-row {
@@ -76,17 +61,3 @@ ion-toolbar ion-item {
   font-size: 20px !important; 
   margin-top: 20px;
 }
-
-// .lower-icon {
-//   margin-top: 10px;
-// }
-
-// .location-item {
-//   display: flex;
-//   align-items: center;
-// }
-
-// .location-icon {
-//   margin-top: 0;
-//   margin-bottom: 0;
-// }
