--- a/src/global.scss
+++ b/src/global.scss
@@ -25,9 +25,6 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-ion-content {
-    overflow: auto;
-}
 
 // ion-item{
 //     --highlight-height: 0;
@@ -91,10 +88,10 @@ ion-segment {
     }
       
       
-    .message-send-icon {
-        color: #A8DADC; //#E63946;
+    // .message-send-icon {
+    //     color: #A8DADC; //#E63946;
         
-    }
+    // }
 }
 
 .input-field-footer {
@@ -161,21 +158,30 @@ ion-button {
 }
 
 //profile
-
-.slide-headers {
-    color: #457b9d;
-    .first-header {
-        margin-top: 0px;
+.otheruser-profile {
+    overflow: auto;
+    .slide-header {
+        padding: 20px;
+        .slides-headers {
+            font-weight: bolder;
+            color: #457B9D;
+        }
     }
 }
 
-.slide-header {
+swiper-container {
+    position: relative;
+    height: fit-content;
     padding: 20px;
 }
 
-// .slide-header *{
-//     font-size: 30px;
-//     ion-icon {
-//         font-size: 25px;
-//     }
-// }
+swiper-container::part(bullet-active) {
+    background-color:#E63946; // #A8DADC;
+    position: relative;
+    bottom: -10px;
+}
+
+swiper-container::part(bullet) {
+    position: relative;
+    bottom: -10px;
+}
