wow factor 1 structure

--- a/src/app/pages/exercise-explorer/exercise-explorer.page.html
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.html
@@ -6,3 +6,10 @@
     </ion-item>
   </ion-toolbar>
 </ion-header>
+
+<ion-content>
+  <ion-button (click)="openExerciseModal()">
+    Test Modal
+    <!-- I just made this button to test the modal. It will be deleted -->
+  </ion-button>
+</ion-content>
