UI-fix improvements

--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -62,7 +62,7 @@
 
                       <ion-note slot="end" color="black">
                         <p>Reps: {{ personalBest.reps }}</p>
-                        <p>Weight: {{ personalBest.weight }}</p>
+                        <p>Weight(Kg): {{ personalBest.weight }}</p>
                       </ion-note>
 
                     </ion-item>
