--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -8,9 +8,10 @@
   </ion-item-divider>
 
   <ion-row>
-      <ion-col>
-        <ion-label>Exercise</ion-label>
-      </ion-col>
+
+    <ion-col>
+      <ion-label style = 'padding-top: 500px'>Exercise</ion-label>
+    </ion-col>
 
       <ion-col>
         <ion-select [(ngModel)]="showExercise" (ionChange)="handleExerciseChange($event)">
