change modal close to backbutton

--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.scss
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.scss
@@ -1,3 +1,10 @@
 ion-toolbar {
     --background: #E63946
 }
+
+.bb {
+    --padding-start: 12px; 
+    --padding-end: 12px; 
+    font-size: 24px; 
+    color: white;
+}
