--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -145,3 +145,10 @@ ion-card-subtitle {
     list-style-type: none;
     // margin-bottom: 5%;
 }
+
+.bb {
+    --padding-start: 12px; 
+    --padding-end: 12px; 
+    font-size: 24px; 
+    color: white;
+}
