--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -95,4 +95,10 @@ ion-header{
     
   }
 
+.delete-button {
+    --background: transparent;
+    font-size: 17px;
+    --border-color: transparent;
+}
+
   
