--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-item-sliding>
-      <ion-item id="viewer">
+      <ion-item id="viewer" lines="none">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-text>
           {{schedule.name}}
@@ -39,7 +39,7 @@
   </ion-card-content>
 
   <div class="info">
-    <ion-item class="progress-label">
+    <ion-item class="progress-label" lines="none">
       <ion-label>{{timeLeft()}}</ion-label>
       <ion-icon name="checkmark-done-outline" slot="end" [ngClass]="{'active': joined(), 'inactive': !joined()}"></ion-icon>
     </ion-item>
