added explorer page to the dashboard. Fixed backbutton cut off.

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -156,12 +156,12 @@
             </ion-row>
             <ion-row>
               <ion-col size="12">
-                <ion-card class="discover-card">
+                <ion-card class="discover-card" routerLink="/exercise-explorer">
                  <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="watch-outline"></ion-icon>
                   </ion-card-title>
-                 Connect!
+                 Explorer!
                  </ion-card-content>
                 </ion-card>
               </ion-col>
