--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -4,7 +4,7 @@
       <div class="back-button">
         <ion-item lines="none">
           <backbutton slot="start"></backbutton>
-          <ion-icon name="create-outline" routerLink="/setprofile" slot="end" style="color: black"></ion-icon>
+          <ion-icon name="create-outline" routerLink="/setprofile" slot="end" style="color: white !important;"></ion-icon>
         </ion-item>
       </div>
       <div class="profile-img-container">
