--- a/src/app/pages/exercise-explorer/exercise-explorer.page.html
+++ b/src/app/pages/exercise-explorer/exercise-explorer.page.html
@@ -1,8 +1,8 @@
-<ion-header style="background-color: #E63946;">
+<ion-header>
   <ion-toolbar>
-    <ion-item style="display: flex; align-items: center; background-color: #E63946;">
-      <backbutton class="larger-back-button" style="background-color: #E63946;"></backbutton>
-      <ion-title style="margin-left: 1rem; background-color: #E63946;">Exercise Explorer</ion-title>
+    <ion-item lines="none">
+      <backbutton class="larger-back-button"></backbutton>
+      <ion-title>Exercise Explorer</ion-title>
     </ion-item>
   </ion-toolbar>
 </ion-header>
