fixed back button navigation for goals

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,22 +7,20 @@
 
   <ion-content>
     <ion-item lines="none" class="clickable" (click)="goToSettings()">
-      <ion-icon name="settings-outline">
-      </ion-icon>
+      <ion-icon name="settings-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
         Settings
       </ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+      <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
     </ion-item>
    
 
     <ion-item lines="none" class="clickable" (click)="userLogout()">
-      <ion-icon name="log-out-outline">
-      </ion-icon>
+      <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
       <ion-label class="menu-label">
         Logout
       </ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+      <ion-icon name="chevron-forward-outline" slot="end" class="menu-icons"></ion-icon>
     </ion-item>
   </ion-content>
 </ion-menu>
