--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <ion-header [translucent]="true">
+  <ion-header>
     <ion-toolbar>
       <ion-item>
         <backbutton class="larger-back-button"></backbutton>
