--- a/src/app/pages/badges/badge/badge.component.scss
+++ b/src/app/pages/badges/badge/badge.component.scss
@@ -8,14 +8,15 @@
 }
 
 .badgeHeader {
-    font-size: x-large;
-    font-weight: bold;
+    font-size: 22px;
+    font-weight: 900;
     margin-bottom: 7px;
     // margin-bottom: 100%;
 }
 
 .badgeDescription {
     font-size: medium;
+    font-weight: bolder;
 }
 
 ion-img {
