--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -26,7 +26,7 @@
                   <ion-icon name="american-football-outline"></ion-icon>
                 </ion-card-title>
                <ion-item lines="none">
-                <ion-text slot="start">Goals</ion-text>
+                <ion-text>Goals</ion-text>
                 <ion-icon name="chevron-forward" slot="end"></ion-icon>
                </ion-item>
               </ion-card-content>
@@ -39,7 +39,7 @@
                   <ion-icon name="bar-chart-outline"></ion-icon>
                 </ion-card-title>
                 <ion-item lines="none">
-                  <ion-text slot="start">Rank</ion-text>
+                  <ion-text>Rank</ion-text>
                   <ion-icon name="chevron-forward" slot="end"></ion-icon>
                  </ion-item>
               </ion-card-content>
