--- a/src/app/pages/messages/chatbox/chatbox.component.html
+++ b/src/app/pages/messages/chatbox/chatbox.component.html
@@ -11,9 +11,11 @@
     </div>
   
     <ng-template #loaderContent>
-      <div class="loader-wrapper">
-        <ion-spinner></ion-spinner>
-      </div>
+      <ion-item lines="none">
+        <div class="loader-wrapper">
+          <ion-spinner></ion-spinner>
+        </div>
+      </ion-item>
     </ng-template>
   </div>
 
