--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,33 +1,20 @@
-<ng-container>
-  <ion-header style="--background: #E63946;">
-    <ion-toolbar>
-      <ion-item>
-        <backbutton class="larger-back-button"></backbutton>
-        <ion-title>Workout Schedule</ion-title>
-      </ion-item>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content [fullscreen]="true">
-    <div class = "outer-container">
-      <div class="body-content">
-        <ion-card *ngFor = "let schedule of schedules">
-          <ion-item>
-            <ion-icon name="receipt-outline"></ion-icon>
-            <ion-text>
-              {{schedule.name}}
-            </ion-text>
-            <ion-button slot="end" (click)="viewSchedule(schedule)" id="xd">View</ion-button>
-          </ion-item>
-          <ion-card-content  *ngIf="isSlideShow">
-            <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
-            <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">{{schedule.date}}</ion-text><br>
-            <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">{{schedule.time}}</ion-text><br>
-            <ion-icon name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br>
-            <ion-icon name="timer-outline"></ion-icon><ion-text class="schedule-value">{{schedule.duration}} minutes</ion-text><br><br>
-        </ion-card-content>
-        </ion-card>
+<ion-header>
+  <ion-toolbar>
+    <ion-item lines="none">
+      <backbutton class="larger-back-button"></backbutton>
+      <ion-title>Workout Schedule</ion-title>
+    </ion-item>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <div class = "outer-container">
+    <div class="body-content">
+      <div *ngFor = "let schedule of schedules">
+        <schedule-content
+          [schedule]="schedule"
+        ></schedule-content>
       </div>
     </div>
-  </ion-content>
-</ng-container>
+  </div>
+</ion-content>
