--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -12,26 +12,13 @@ ion-item:not(.progress-label){
 #viewer {
     ion-button {
       --background: #E63946;
-      --color: black;
+      --color: white;
+      --border-color: #E63946;
     }
   }
 
 ion-card, ion-item {
     opacity: 1;
-}
-
-ion-button {
-    --background: #A8DADC;
-    --background-hover: #9ce0be;
-    --background-activated: #88f4be;
-    --background-focused: #88f4be;
-  
-    --color: #000;
-  
-    --border-color: #E63946;
-    --border-style: solid;
-  
-    --ripple-color: deeppink;
 }
 
 ion-icon.active {
