--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -11,16 +11,12 @@
   <ion-content [fullscreen]="true">
     <div class = "outer-container">
       <div class="body-content">
-        <ion-card *ngFor = "let friend of friends">
-          <ion-item>
-            <ion-avatar>
-              <img src = "{{friend.profileURL}}" alt="image here" />
-            </ion-avatar>
-            <ion-text>{{friend.name}}</ion-text>
-            <ion-icon name="chevron-forward-outline" slot = "end"  *ngIf="!isCurrentUser(friend)" (click)="viewOtherUser(friend)"></ion-icon>
-            <ion-text slot="end" *ngIf="isCurrentUser(friend)">you</ion-text>
-          </ion-item>
-        </ion-card>
+        <div *ngFor = "let friend of friends">
+          <friends-contents
+            [friend]="friend"
+            [userId]="userId"
+          ></friends-contents>
+        </div>
       </div>
     </div>
   </ion-content>                
