--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="auto">
-          <ion-img src="assets/badge0.png"></ion-img>
+          <ion-img [src]="imageName"></ion-img>
         </ion-col>
         <ion-col class="content">
           <div class="badgeHeader">{{name}}</div>
