--- a/src/app/pages/badges/badges.page.html
+++ b/src/app/pages/badges/badges.page.html
@@ -12,6 +12,7 @@
     [receivedDescription] = "badge.receivedDescription"
     [notReceivedDescription] = "badge.notReceivedDescription"
     [received] = "badge.received"
+    [imageName]="badge.imageName"
   ></badge>
   </ion-grid>
 </ion-content>
