--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -3,7 +3,13 @@
     <ion-grid>
       <ion-row>
         <ion-col size="auto">
-          <ion-img [src]="imageName"></ion-img>
+          <div style="position: relative">
+
+            <ion-img [src]="imageName"></ion-img>
+          
+            <ion-img *ngIf="!received" src="assets/lock.png" style="position: absolute; top: 5px; left: 10px; width: 80%; height: 80%"></ion-img>
+          
+          </div>
         </ion-col>
         <ion-col class="content">
           <div class="badgeHeader">{{name}}</div>
