location icon added

--- a/src/app/pages/badges/badge/badge.component.html
+++ b/src/app/pages/badges/badge/badge.component.html
@@ -2,7 +2,7 @@
   <ion-item>
     <ion-grid>
       <ion-row>
-        <ion-col size="auto">
+        <ion-col size="auto" class="badgeSection">
           <div style="position: relative">
 
             <ion-img [src]="imageName"></ion-img>
