--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -64,10 +64,18 @@
 
                 </ion-item>
 
-                <ion-item>
-                    <ion-label>Location :</ion-label>
+                <!-- <ion-item>
+                    <ion-label>Location:</ion-label>
                     <ion-input formControlName="location" type="txt"></ion-input>
-                  </ion-item>
+                  </ion-item> -->
+                  <div class="location-container">
+                    <ion-item class="location-item">   
+                      <ion-label position="stacked">Location</ion-label>  
+                      <ion-input type="text" formcontrolname="location" placeholder="Click on the location icon"></ion-input>      
+                    </ion-item>
+                  
+                    <ion-icon name="location" slot="end" (click)="openLocationModal()" class="location-icon"></ion-icon>
+                  </div>
 
                 <ion-item>
                   <ion-label>Notes :</ion-label>
