--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -16,9 +16,13 @@
                 <img alt="Silhouette of a person's head" [src]="chatFriend.user.profileURL!" />
               </ion-avatar>
               <ion-label>
-                <h2 class="user-name">{{ chatFriend.user.displayName! }}</h2>
+                <div class="top-items">
+                  <ion-label class="user-name-label">
+                    <h2 class="user-name">{{ chatFriend.user.displayName! }}</h2> 
+                  </ion-label>
+                  <p class="timestamp">{{ chatFriend.lastChat!.date?.toDate() | date:'MMM d, hh:mm a' }}</p>
+                </div>
                 <p class="last-message">{{"~ " + chatFriend.lastChat!.text }}</p>
-                <p class="timestamp" slot="end">{{ chatFriend.lastChat!.date?.toDate() | date:'MMM d, hh:mm a' }}</p>
               </ion-label>
             </ion-item>
           </div>
@@ -57,7 +61,7 @@
     <ng-template>
       <ion-content>
         <ion-searchbar placeholder="Search" (click)="modal.setCurrentBreakpoint(0.75)"></ion-searchbar>
-        <ion-list>
+        <ion-list class="friends-list">
           <ion-item  *ngFor="let friend of friends" lines="none" (click)="stageUser(friend,modal)">
             <ion-avatar slot="start">
               <ion-img [src]="friend.profileURL"></ion-img>
