--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -1,8 +1,8 @@
-.main{
-    --background: none;
-    --background: url('/assets/Asset 2.png') no-repeat center/contain fixed;
+// .main{
+//     --background: none;
+//     --background: url('/assets/Asset 2.png') no-repeat center/contain fixed;
     
-}
+// }
 
 .main2{
     --background: none;
