--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -67,7 +67,8 @@
         <br>
         <ion-card-subtitle class="blackText" >{{ gym.vicinity }}</ion-card-subtitle>
         <br>
-        <ion-card-subtitle class="blackText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}<ion-icon name="star" class="ratingIcon"></ion-icon></ion-card-subtitle>
+        <!-- <ion-card-subtitle class="blackText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}<ion-icon name="star" class="ratingIcon"></ion-icon></ion-card-subtitle> -->
+        <ion-card-subtitle class="blackText" >{{ gym.rating ? gym.rating : 'No Rating' }}<ng-container *ngFor="let i of [1,2,3,4,5]"> <ion-icon name="star" class="ratingIcon" [ngClass]="{'filled': i <= gym.rating}" ></ion-icon> </ng-container></ion-card-subtitle>
       </ion-card-header>
       
         <ion-card-content class="friend-container">
