--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -79,8 +79,12 @@ ion-card-subtitle {
     font-size: 20px;
 }
 
-.ratingIcon {
+.filled {
     color: gold;
+}
+
+.ratingIcon {
+    color: grey;
     margin-bottom: -2px;
     filter: drop-shadow(1px 1px 0 black);
 }
@@ -103,7 +107,7 @@ ion-card-subtitle {
     // padding-top: 0%;
     margin-top: 0%;
     background: #1D3557;
-    border-radius: 15px;
+    border-radius: 25px;
     color: white !important;
     font-size: 15px;
     font-weight: 700;
@@ -147,8 +151,9 @@ ion-card-subtitle {
 }
 
 .input-container {
-    background: #f5f5f5;
-    padding: 0px;
+    background: #00000012;
+    // padding-bottom: 1px;
+    padding: 0px 0px 1px;
     height: 40px;
     border-radius: 30px;
 }
