--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
@@ -1,11 +1,12 @@
 <ion-header>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <ion-toolbar>
-      <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
-    <ion-title>View Exercises</ion-title>
-    <!-- <ion-buttons slot="end">
-      <ion-button (click)="dismissModal()">Close</ion-button>
-    </ion-buttons> -->
+    <ion-item lines="none">
+        <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
+        <ion-title>View Exercises</ion-title>
+        <!-- <ion-buttons slot="end">
+        <ion-button (click)="dismissModal()">Close</ion-button>
+        </ion-buttons> -->
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
@@ -28,6 +29,3 @@
         </ion-card>
 
 </ion-content>
-
-<!-- <p>View Exercises</p> -->
-
