--- a/src/app/pages/messages/create-group/create-group.component.html
+++ b/src/app/pages/messages/create-group/create-group.component.html
@@ -10,7 +10,6 @@
 </ion-header>
 
 <ion-content>
-
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -19,7 +18,8 @@
           <ion-input type="text" [(ngModel)]="group.displayName"></ion-input>
         </ion-item>
       </ion-col>
-    </ion-row><ion-row>
+    </ion-row>
+    <ion-row>
       <ion-col>
         <ion-item>
           <ion-label position="floating">Group Description</ion-label>
