--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -1,9 +1,11 @@
-<ion-header [translucent]="true">
+<ion-header>
+ <ion-toolbar>
   <ion-item style="display: flex; align-items: center;" lines="none">
     <backbutton class="larger-back-button"></backbutton>
     <ion-title style="margin: 0 auto;" *ngIf="name$ | async as usersName;">{{usersName}}</ion-title>
     <!-- <ion-title style="margin: 0 auto;">{{user!.name}}'s' Badges</ion-title> -->
   </ion-item>
+ </ion-toolbar>
 </ion-header>
 
 <ion-content class="badgesContainer">
